# records

./: .gitignore  .merlin  .travis.yml  CHANGELOG.md  CHANGES.md  META  Makefile  README.md  _tags  example.ml  opam  polid.ml  polid.mli  ppx_deriving_typ.ml  record.ml  record.mli  records.descr  records.mllib  records.opam  tests.ml  type.ml  type.mli
.github/workflows/: main.yml
doc/: Record.Field.html  Record.Polid.html  Record.Safe.LAYOUT.html  Record.Safe.html  Record.Type.html  Record.Unsafe.html  Record.Util.html  Record.html  html.stamp  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_Record.Field.html  type_Record.Polid.html  type_Record.Safe.LAYOUT.html  type_Record.Safe.html  type_Record.Type.html  type_Record.Unsafe.html  type_Record.Util.html  type_Record.html
pkg/: META  pkg.ml
src/: dune  record.ml  record.mli
test/: dune  example.ml  tests.ml
