opam-version: "1.2"
maintainer: "Etienne Millon <etienne@cryptosense.com>"
authors: "Etienne Millon <etienne@cryptosense.com>"
homepage: "https://github.com/cryptosense/records"
bug-reports: "https://github.com/cryptosense/records/issues"
license: "BSD-2"
dev-repo: "https://github.com/cryptosense/records.git"
doc: "https://cryptosense.github.io/records/doc"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune" {build & >= "1.1.0"}
  "ounit" {test & >= "2.0.0"}
  "result"
  "yojson"
]
tags: ["org:cryptosense"]
available: [ocaml-version >= "4.02.0"]
