opam-version: "2.0"
maintainer: "Cryptosense <opensource@cryptosense.com>"
authors: [
    "Cryptosense <opensource@cryptosense.com>"
    "Etienne Millon <etienne@cryptosense.com>"
]
homepage: "https://github.com/cryptosense/records"
bug-reports: "https://github.com/cryptosense/records/issues"
license: "BSD-2-Clause"
dev-repo: "git+https://github.com/cryptosense/records.git"
doc: "https://cryptosense.github.io/records/doc"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune" {>= "2.0"}
  "ocaml" {>= "4.08.0"}
  "ounit" {with-test & >= "2.0.0"}
  "yojson" {>= "1.6.0"}
]
tags: ["org:cryptosense"]
synopsis: "Dynamic records"
description: """
This library enables you to define and manipulate dynamic records in OCaml.
"""
